feat(jvm): Add demo code for JVM.
- Add Javadoc comment which about JVM parameters.